[gd_scene load_steps=39 format=3 uid="uid://q5ldrhlikm11"]

[ext_resource type="PackedScene" uid="uid://blj6bor2n7hyd" path="res://src/player/platform_controller.tscn" id="1_gtfn5"]
[ext_resource type="Script" path="res://src/player/player.gd" id="1_kqnht"]
[ext_resource type="Texture2D" uid="uid://cflhousgkvb23" path="res://assets/prototype/gfx/characters/player/player-master.png" id="2_8ll7n"]
[ext_resource type="Script" path="res://addons/xsm/state.gd" id="3_17k6u"]
[ext_resource type="Script" path="res://src/player/xsm/idle.gd" id="5_5dat7"]
[ext_resource type="Script" path="res://src/player/xsm/can_dash.gd" id="6_bvrt0"]
[ext_resource type="Script" path="res://src/player/xsm/dash.gd" id="6_k6vq6"]
[ext_resource type="Script" path="res://src/player/xsm/move.gd" id="6_lkixy"]
[ext_resource type="Script" path="res://src/player/xsm/climb.gd" id="7_ekgay"]
[ext_resource type="Script" path="res://src/player/xsm/jump.gd" id="8_7ga8y"]
[ext_resource type="Script" path="res://src/player/xsm/fall.gd" id="9_aqd42"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4cv33"]
radius = 20.0
height = 90.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8sdhx"]
atlas = ExtResource("2_8ll7n")
region = Rect2(0, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_q56g3"]
atlas = ExtResource("2_8ll7n")
region = Rect2(64, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm54c"]
atlas = ExtResource("2_8ll7n")
region = Rect2(320, 216, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_708n2"]
atlas = ExtResource("2_8ll7n")
region = Rect2(192, 144, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3wif"]
atlas = ExtResource("2_8ll7n")
region = Rect2(0, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_1crpf"]
atlas = ExtResource("2_8ll7n")
region = Rect2(64, 0, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7rxd"]
atlas = ExtResource("2_8ll7n")
region = Rect2(0, 144, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrk"]
atlas = ExtResource("2_8ll7n")
region = Rect2(64, 144, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_uywen"]
atlas = ExtResource("2_8ll7n")
region = Rect2(0, 216, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_85y6i"]
atlas = ExtResource("2_8ll7n")
region = Rect2(64, 216, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv5n3"]
atlas = ExtResource("2_8ll7n")
region = Rect2(128, 216, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s54e"]
atlas = ExtResource("2_8ll7n")
region = Rect2(192, 216, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7uil"]
atlas = ExtResource("2_8ll7n")
region = Rect2(256, 216, 64, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvgid"]
atlas = ExtResource("2_8ll7n")
region = Rect2(320, 216, 64, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_iu2cq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sdhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q56g3")
}],
"loop": true,
"name": &"climb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm54c")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_708n2")
}],
"loop": false,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3wif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1crpf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7rxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrk")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uywen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85y6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv5n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s54e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7uil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvgid")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_v7knb"]
resource_name = "climb"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"climb"]
}

[sub_resource type="Animation" id="Animation_37s62"]
resource_name = "dash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dash"]
}

[sub_resource type="Animation" id="Animation_v56j6"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"falling"]
}

[sub_resource type="Animation" id="Animation_na8jo"]
resource_name = "idle"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_l83l0"]
resource_name = "jump"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}

[sub_resource type="Animation" id="Animation_db474"]
resource_name = "move"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q26do"]
_data = {
"climb": SubResource("Animation_v7knb"),
"dash": SubResource("Animation_37s62"),
"fall": SubResource("Animation_v56j6"),
"idle": SubResource("Animation_na8jo"),
"jump": SubResource("Animation_l83l0"),
"move": SubResource("Animation_db474")
}

[sub_resource type="Animation" id="Animation_i713k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ow5w8"]
resource_name = "left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-12, 0)]
}

[sub_resource type="Animation" id="Animation_40f4u"]
resource_name = "right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bkyi4"]
_data = {
"RESET": SubResource("Animation_i713k"),
"left": SubResource("Animation_ow5w8"),
"right": SubResource("Animation_40f4u")
}

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_layer = 16
script = ExtResource("1_kqnht")

[node name="platform_controller" parent="." instance=ExtResource("1_gtfn5")]
max_deccel = 100.0
dash_boost = 900.0
dash_hangtime = 0.4
h = 400.0
damping_speed = 250.0
inertia_factor = 0.4
air_accel_factor = 0.75
coyote_time = 0.1
jump_buffer = 0.1
allow_wall_jump = true
wall_jump_x = 400.0
xsm_path = NodePath("../xsm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -47)
shape = SubResource("CapsuleShape2D_4cv33")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.239216, 0.419608, 0.309804, 1)
polygon = PackedVector2Array(-16, -104, 0, -160, 16, -104, 21, 0, -19, -1)

[node name="sprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(6, -32)
sprite_frames = SubResource("SpriteFrames_iu2cq")
animation = &"dash"

[node name="xsm" type="Node" parent="."]
script = ExtResource("3_17k6u")
history_size = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="idle" type="Node" parent="xsm"]
script = ExtResource("5_5dat7")
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = "idle"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../dash")

[node name="dash" type="Node" parent="xsm"]
script = ExtResource("6_k6vq6")
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = "dash"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../climb")

[node name="climb" type="Node" parent="xsm"]
script = ExtResource("7_ekgay")
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = "climb"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../can_dash")

[node name="can_dash" type="Node" parent="xsm"]
script = ExtResource("6_bvrt0")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../dash")

[node name="move" type="Node" parent="xsm/can_dash"]
script = ExtResource("6_lkixy")
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = "move"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../jump")

[node name="jump" type="Node" parent="xsm/can_dash"]
script = ExtResource("8_7ga8y")
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = "jump"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../fall")

[node name="fall" type="Node" parent="xsm/can_dash"]
script = ExtResource("9_aqd42")
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = "fall"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q26do")
}

[node name="DirAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bkyi4")
}

[node name="sfx" type="Node" parent="."]

[node name="timer_fs" type="Timer" parent="sfx"]
wait_time = 0.5
one_shot = true

[node name="run" type="AudioStreamPlayer2D" parent="sfx"]

[node name="jump" type="AudioStreamPlayer2D" parent="sfx"]

[node name="land" type="AudioStreamPlayer2D" parent="sfx"]

[node name="climb_rc" type="RayCast2D" parent="."]
position = Vector2(0, -56)
enabled = false
target_position = Vector2(30, 0)

[connection signal="timeout" from="sfx/timer_fs" to="." method="_on_timer_fs_timeout"]
